--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -52,7 +52,7 @@
     </section>
   </main>
   <footer class="page__footer">
-    <p>&copy Udacity</p>
+    <p>&copy LuvKumar</p>
   </footer>
 
 </body>
